@@ -297,6 +297,9 @@ Bug Fixes
 * SOLR-2625: TermVectorComponent throws NPE if TF-IDF option is used without DF
   option. (Daniel Erenrich, Simon Willnauer)
 
+* SOLR-2631: PingRequestHandler should not allow to ping itsself using "qt"
+  param to prevent infinite loop. (Edoardo Tosca, Uwe Schindler)
+
 Other Changes
 ----------------------
 
